syntax = "proto3";

package protos;

option go_package = "github.com/seoyhaein/ConnectService/protos";

message JobsRequest {
  int64 job_req_id = 1; // client id 로 할지 고민.
  string input_message = 2;
}

message JobsResponse {
  int64 job_res_id = 1; // client id 로 할지 고민.

  enum Status {
    IN_PROGRESS = 0;
    CANCELED = 1;
    FAILED = 2;
    COMPLETED = 3;

    TIME_OUT = 4; // 일단 넣어두기는 함. 필요 없을 것 같다.
    FINISHED = 5; // 최종 전송이 되었는가 안되었는가
  }

  Status status = 2;
  string output_message = 3;
}

service LongLivedJobCall {
  rpc Subscribe(JobsRequest) returns (stream JobsResponse) {}
  rpc Unsubscribe(JobsRequest) returns (JobsResponse) {}
}